Add some features